Add FilePath.class to getRequiredContext